# uno_score_logger

./: .gitignore  index.html  script.js  styles.css
backend/: .env  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: game.py
backend/services/: game_service.py
frontend/: dashboard.html  game-detail.html  index.html  new-game.html
frontend/css/: dashboard.css  game-detail.css  new-game.css  style.css
frontend/js/: dashboard.js  game-detail.js  new-game.js  script.js  theme.js
